@@ -4,6 +4,7 @@ Changes for templates:
 	* Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
 	* The template and script version is now recorded in a GPRINT (issue 79).
 	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
+	* Added the InnoDB Checkpoint Age graph (issue 73).
 	* Added the InnoDB Active/Locked Transactions graph.
 	* Added the InnoDB Memory Allocation graph.
 	* Added the InnoDB Adaptive Hash Index graph.
